--- a/requirements.txt
+++ b/requirements.txt
@@ -15,15 +15,20 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 nest-asyncio==1.6.0
+numpy==2.0.0
 packaging==24.1
+pandas==2.2.2
 pip==24.1
 plotly==5.22.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
 requests==2.32.3
 retrying==1.3.4
 setuptools==70.3.0
 six==1.16.0
 tenacity==8.5.0
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==2.2.2
 Werkzeug==3.0.3
 zipp==3.19.2
