--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dash==2.17.1
+dash-bootstrap-components==1.6.0
+dash-bootstrap-templates==1.2.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
